--- a/MarioKartiOS/Base.lproj/Main.storyboard
+++ b/MarioKartiOS/Base.lproj/Main.storyboard
@@ -1,24 +1,154 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MarioKartiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="3Hy-ZO-j8s">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="gTs-yv-sch" appends="YES" id="ve5-dj-5gG"/>
+                                </connections>
+                            </imageView>
+                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" fixedFrame="YES" image="kart_1" translatesAutoresizingMaskIntoConstraints="NO" id="H1w-Cb-Pet">
+                                <rect key="frame" x="20" y="398" width="100" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="PGq-GU-2s0" appends="YES" id="6ib-ch-VJg"/>
+                                    <outletCollection property="gestureRecognizers" destination="Ipt-Va-s2R" appends="YES" id="uxa-od-imA"/>
+                                    <outletCollection property="gestureRecognizers" destination="Mr8-CG-dMr" appends="YES" id="fJz-wz-dOu"/>
+                                    <outletCollection property="gestureRecognizers" destination="n57-P2-wfw" appends="YES" id="pAs-GT-cQL"/>
+                                </connections>
+                            </imageView>
+                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" fixedFrame="YES" image="kart_2" translatesAutoresizingMaskIntoConstraints="NO" id="34t-tJ-pro">
+                                <rect key="frame" x="20" y="523" width="100" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="6Xs-6T-Y0W" appends="YES" id="AsA-Bs-5l8"/>
+                                    <outletCollection property="gestureRecognizers" destination="Ubv-8e-Pbm" appends="YES" id="qXi-LK-sSQ"/>
+                                    <outletCollection property="gestureRecognizers" destination="Tjt-gq-77f" appends="YES" id="A3B-2p-SeH"/>
+                                    <outletCollection property="gestureRecognizers" destination="6dB-Ep-N77" appends="YES" id="x0y-cd-mEM"/>
+                                </connections>
+                            </imageView>
+                            <imageView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" fixedFrame="YES" image="kart_0" translatesAutoresizingMaskIntoConstraints="NO" id="FfO-wC-l5I">
+                                <rect key="frame" x="20" y="274" width="100" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="V4f-0M-b0k" appends="YES" id="98W-4U-R8f"/>
+                                    <outletCollection property="gestureRecognizers" destination="9qO-dp-SGH" appends="YES" id="Bsl-RE-wPq"/>
+                                    <outletCollection property="gestureRecognizers" destination="gPE-Sn-dzA" appends="YES" id="tX6-jI-cne"/>
+                                    <outletCollection property="gestureRecognizers" destination="Wcu-E4-DVA" appends="YES" id="7SB-vG-kMV"/>
+                                </connections>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="3Hy-ZO-j8s" secondAttribute="bottom" constant="-34" id="2Gu-bt-pS5"/>
+                            <constraint firstItem="3Hy-ZO-j8s" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QaA-93-1nd"/>
+                            <constraint firstItem="3Hy-ZO-j8s" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="ZdT-T6-oAT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3Hy-ZO-j8s" secondAttribute="trailing" id="lt6-1O-1BF"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="kartViewBowser" destination="FfO-wC-l5I" id="1Y5-OJ-Bl8"/>
+                        <outlet property="kartViewMario" destination="H1w-Cb-Pet" id="LSV-7O-Mnq"/>
+                        <outlet property="kartViewMush" destination="34t-tJ-pro" id="GIR-qO-Pvf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="V4f-0M-b0k">
+                    <connections>
+                        <action selector="didPanKartView:" destination="BYZ-38-t0r" id="y1B-bh-r7B"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="PGq-GU-2s0">
+                    <connections>
+                        <action selector="didPanKartView:" destination="BYZ-38-t0r" id="dZk-Ez-c0c"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="6Xs-6T-Y0W">
+                    <connections>
+                        <action selector="didPanKartView:" destination="BYZ-38-t0r" id="xXF-qE-dBh"/>
+                    </connections>
+                </panGestureRecognizer>
+                <pinchGestureRecognizer id="9qO-dp-SGH">
+                    <connections>
+                        <action selector="didPinchKartView:" destination="BYZ-38-t0r" id="qWm-Bm-nb9"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <pinchGestureRecognizer id="Ipt-Va-s2R">
+                    <connections>
+                        <action selector="didPinchKartView:" destination="BYZ-38-t0r" id="i31-e3-dDC"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <pinchGestureRecognizer id="Ubv-8e-Pbm">
+                    <connections>
+                        <action selector="didPinchKartView:" destination="BYZ-38-t0r" id="TPC-Tb-s3j"/>
+                    </connections>
+                </pinchGestureRecognizer>
+                <rotationGestureRecognizer id="gPE-Sn-dzA">
+                    <connections>
+                        <action selector="didRotationKartView:" destination="BYZ-38-t0r" id="YaN-rj-rN5"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <rotationGestureRecognizer id="Mr8-CG-dMr">
+                    <connections>
+                        <action selector="didRotationKartView:" destination="BYZ-38-t0r" id="UqQ-9w-RI9"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <rotationGestureRecognizer id="Tjt-gq-77f">
+                    <connections>
+                        <action selector="didRotationKartView:" destination="BYZ-38-t0r" id="zBl-1Y-jQS"/>
+                    </connections>
+                </rotationGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="Wcu-E4-DVA">
+                    <connections>
+                        <action selector="didTapKartView:" destination="BYZ-38-t0r" id="7R4-JM-k6E"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="n57-P2-wfw">
+                    <connections>
+                        <action selector="didTapKartView:" destination="BYZ-38-t0r" id="CdF-Rq-D5o"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer numberOfTapsRequired="2" id="6dB-Ep-N77">
+                    <connections>
+                        <action selector="didTapKartView:" destination="BYZ-38-t0r" id="idz-Ss-jul"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="gTs-yv-sch">
+                    <connections>
+                        <action selector="didLongPressBackground:" destination="BYZ-38-t0r" id="Blv-7L-f55"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="116.51785714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="320" height="568"/>
+        <image name="kart_0" width="340" height="340"/>
+        <image name="kart_1" width="340" height="340"/>
+        <image name="kart_2" width="340" height="340"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
